--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,274 @@
 /* место для вашего кода */
+
+.header {
+  display: flex;
+  padding: 105px 24px 96px;
+  font-size: 18px;
+  align-items: center;
+  text-underline-offset: 5px;
+}
+.header__menu {
+}
+.header__links-list {
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  padding-left: 28px;
+  list-style: none;
+}
+.header__links-list-item {
+  position: relative;
+}
+.header__links-list-item:before {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -22px;
+  content: "";
+  width: 7px;
+  height: 7px;
+  display: flex;
+  border: 1px solid black;
+  border-radius: 50%;
+}
+.header__links-list-item:last-child:before {
+  display: none;
+}
+.header__link_active .header__link {
+  text-decoration: none;
+}
+.header__logo {
+  flex: 0 0 auto;
+  width: 17%;
+  padding-left: 42px;
+}
+.header__logo-image {
+  padding: auto;
+}
+.address {
+  font-style: normal;
+  line-height: 24px;
+  letter-spacing: 1.15px;
+  text-underline-offset: 4px;
+}
+.header__address {
+  padding-left: 192px;
+  letter-spacing: 0.15px;
+}
+.cover {
+  background-image: url("../images/cover.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: #ffffff;
+  text-transform: uppercase;
+  position: relative;
+  z-index: -1;
+}
+.overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 0;
+}
+.cover__title {
+  font-size: 100px;
+  font-weight: 700;
+  letter-spacing: 30px;
+  padding: 163px 50px 0;
+  z-index: 1;
+  position: relative;
+}
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+.letter-spacing-base {
+  letter-spacing: 30px;
+}
+.aligned-text {
+  display: block;
+  text-align: start;
+  line-height: 115px;
+  margin-bottom: 20px;
+}
+.aligned-text_center {
+  display: block;
+  text-align: center;
+  line-height: 100px;
+  margin-bottom: 20px;
+}
+.aligned-text_right {
+  display: block;
+  text-align: right;
+  line-height: 100px;
+}
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+.cover__description {
+  display: flex;
+  justify-content: space-between;
+  font-size: 22px;
+  padding: 133px 52px 51px 78px;
+  align-items: center;
+  z-index: 1;
+  position: relative;
+}
+.cover__description-text {
+  font-weight: 400;
+  line-height: 28px;
+  word-spacing: 19px;
+}
+.bet-button {
+  background: transparent;
+  color: #ffffff;
+  font-size: 22px;
+  font-weight: 500;
+  text-transform: uppercase;
+  border: 1px solid #ffffff;
+  width: 256px;
+  height: 51px;
+}
+.lots {
+  padding: 179px 24px 146px;
+}
+.lots__heading {
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 46.96px;
+  text-transform: uppercase;
+  color: #000000;
+  padding-left: 40px;
+  padding-bottom: 27px;
+}
+.lots__card-list {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 30px;
+}
+.lots__card-list-item {
+  width: 334px;
+  min-height: 563px;
+}
+.card-link {
+  height: 100%;
+  text-decoration: none;
+}
+.card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  color: #ffffff;
+  padding: 51px 40px 48px;
+  position: relative;
+}
+.card__title {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-transform: uppercase;
+  text-decoration: underline;
+  z-index: 1;
+}
+.card__text {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  z-index: 1;
+}
+.card_type_film {
+  background-image: url("../images/card-lot-01.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.card_type_book {
+  background-image: url("../images/card-lot-02.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.card_type_picture {
+  background-image: url("../images/card-lot-03.jpg");
+  background-position: center;
+  background-size: cover;
+}
+.lots__look-more-link {
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 23.48px;
+  padding-left: 40px;
+}
+.about__column {
+  padding: 35px 24px 154px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: min-content min-content;
+  gap: 10px;
+  align-items: center;
+}
+.about__logo {
+  background-color: #000000;
+  border-radius: 50%;
+  width: 240px;
+  grid-row-start: span 1;
+  margin: auto;
+  height: 240px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.about__logo-image {
+  display: block;
+  padding: 64px 45px 62px 46px;
+}
+.about__title {
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 47px;
+}
+.about__text {
+  grid-column: 2;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  word-spacing: 1px;
+}
+.about__text span {
+  display: block;
+  padding: 0 0 24px;
+}
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 0 50px;
+}
+
+.footer__menu {
+  letter-spacing: 1.5px;
+}
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  list-style: none;
+  text-transform: lowercase;
+  line-height: 21.13px;
+}
+.footer__menu-link_active .footer__menu-link {
+  text-decoration: none;
+}
+.footer__social-list {
+  list-style: none;
+  display: flex;
+  gap: 48px;
+  justify-content: flex-end;
+}
+.footer__social-icon {
+  max-width: 48px;
+}
